--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         muted="muted"
         loop="loop"
       >
-        <source src="/img/smoke2.mp4" type="video/mp4" />
+        <source src="/smoke2.mp4" type="video/mp4" />
       </video>
       <div class="container h-100">
         <div class="d-flex h-100 text-left align-items-center">
