--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light px-4 border-bottom sticky-top">
+    <nav
+      class="navbar navbar-expand-md navbar-light px-4 border-bottom sticky-top"
+    >
       <!--  Show this only on mobile to medium screens  -->
       <a class="navbar-brand d-md-none mt-2" href="#">ETHER EXPRESSIVE</a>
 
@@ -96,7 +98,13 @@
         muted="muted"
         loop="loop"
       >
-        <source src="/ether/smoke2.mp4" type="video/mp4" />
+        <source
+          src="/smoke2.mp4"
+          width="100vw"
+          height="auto"
+          poster="/poster.png"
+          type="video/mp4"
+        />
       </video>
       <div class="container h-100">
         <div class="d-flex h-100 text-left align-items-center">
@@ -122,11 +130,17 @@
             <h1>MAGIC</h1>
             <div class="block pb-3">
               <p class="text-left">
-                <span class="first-character ny">B</span>reaking into the New
-                York fashion world is no easy task. But by the early 2000's, UGG
-                Australia began to take it by storm. The evolution of UGG from a
-                world and UGG was now perfectly aligned with this movement.
+                <span class="first-character ny">W</span>e help alternative
+                healers and spiritual entrepreneurs banish confusion, connect
+                with clients, and grow their business. we specialize in helping
+                holistic, spiritual & metaphysical businesses, like yours, build
+                and establish an online web presence.
               </p>
+              <div class="mt-4 pt-4 pb-3">
+                <p class="text-center">
+                  <a class="border-button" href="#">Let's Connect</a>
+                </p>
+              </div>
             </div>
           </div>
         </section>
