--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         loop="loop"
       >
         <source
-          src="/smoke2.mp4"
+          src="/ether/smoke2.mp4"
           width="100vw"
           height="auto"
           poster="/poster.png"
