--- a/index.html
+++ b/index.html
@@ -130,11 +130,16 @@
             <h1>MAGIC</h1>
             <div class="block pb-3">
               <p class="text-left">
-                <span class="first-character ny">W</span>e help alternative
-                healers and spiritual entrepreneurs banish confusion, connect
-                with clients, and grow their business. we specialize in helping
-                holistic, spiritual & metaphysical businesses, like yours, build
-                and establish an online web presence.
+                <span class="first-character ny">A</span>s a purpose-driven and
+                spiritually guided healer with a desire to transform, you
+                deserve a website that reflects your powerful message.
+              </p>
+              <p class="line-break mt-4"></p>
+              <p class="mt-4 text-center">
+                We can help you banish confusion, connect with
+                clients, and grow your business online. We specialize in helping alternative,
+                holistic, spiritual, and metaphysical entrepreneurs, like you, build
+                and establish an online web presence that aligns with heart-center.
               </p>
               <div class="mt-4 pt-4 pb-3">
                 <p class="text-center">
@@ -147,19 +152,16 @@
 
         <section>
           <div class="parallax-one">
-            <h2>NIGHT</h2>
+            <h2>Imagine</h2>
           </div>
         </section>
 
         <section>
           <div class="block">
             <p>
-              <span class="first-character sc">I</span>n 1978, Brian Smith
-              landed in Southern California with a bag of sheepskin boots and
-              hope. He fell in love with the sheepskin experience and was
-              convinced the world would one day share this love. The beaches of
-              jacket. When winter came along, UGG boots were in ski shops and
-              were seen in lodges from Mammoth to Aspen.
+              <span class="first-character sc">A</span>s a purpose-driven and
+              spiritually guided healer with a desire to transform, you deserve
+              a website that reflects your powerful message.
             </p>
             <p class="line-break margin-top-10"></p>
             <p class="margin-top-10">
