fix blurb again lol

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
               </p>
               <p class="line-break mt-4"></p>
               <p class="mt-4 text-center">
-                Our mission is to banish confusion and connect you with ideal
-                clients. We specialize in helping alternative, holistic,
+                Our mission is to banish confusion and connect you with your
+                ideal clients. We specialize in helping alternative, holistic,
                 spiritual, and metaphysical entrepreneurs, like you, build and
-                establish websites that aligns with heart-center.
+                establish websites that align with heart-center.
               </p>
               <div class="mt-4 pt-4 pb-3">
                 <p class="text-center">
