--- a/index.html
+++ b/index.html
@@ -132,18 +132,17 @@
               <p class="text-left">
                 <span class="first-character ny">A</span>s a purpose-driven and
                 spiritually guided healer with a desire to transform, you
-                deserve a website that reflects your powerful message.
+                deserve a website that reflects your powerful mission.
               </p>
               <p class="line-break mt-4"></p>
-              <p class="mt-4 text-center">
-                Our mission is to banish confusion and connect you with your
-                ideal clients. We specialize in helping alternative, holistic,
-                spiritual, and metaphysical entrepreneurs, like you, build and
-                establish websites that align with heart-center.
+              <p class="mt-4">
+                We specialize in helping alternative, holistic, spiritual, and
+                metaphysical entrepreneurs, like you, with gorgeous websites
+                that convey your authenticity and creativity.
               </p>
               <div class="mt-4 pt-4 pb-3">
                 <p class="text-center">
-                  <a class="border-button" href="#">Let's Connect</a>
+                  <a class="border-button" href="contact.html">Let's Connect</a>
                 </p>
               </div>
             </div>
