--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
             <div class="block pb-3">
               <p class="text-left">
                 <span class="first-character ny">A</span>s a purpose-driven and
-                spiritually guided healer with a desire to transform, you
+                spiritually guided healer with a desire to change the world, you
                 deserve a website that reflects your powerful mission.
               </p>
               <p class="line-break mt-4"></p>
               <p class="mt-4">
-                We specialize in helping alternative, holistic, spiritual, and
-                metaphysical entrepreneurs, like you, with gorgeous websites
+                We specialize in helping holistic, alternative, spiritual, and
+                metaphysical entrepreneurs like you with gorgeous websites
                 that convey your authenticity and creativity.
               </p>
               <div class="mt-4 pt-4 pb-3">
