--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
               <p class="text-left">
                 <span class="first-character ny">A</span>s a purpose-driven and
                 spiritually guided healer with a desire to change the world, you
-                deserve a website that reflects your powerful mission.
+                deserve a website that reflects your powerful message.
               </p>
               <p class="line-break mt-4"></p>
               <p class="mt-4">
-                We specialize in helping holistic, alternative, spiritual, and
-                metaphysical entrepreneurs like you with gorgeous websites
+                Our mission and specialty is helping holistic, spiritual, and
+                metaphysical entrepreneurs like you create gorgeous websites
                 that convey your authenticity and creativity.
               </p>
               <div class="mt-4 pt-4 pb-3">
