--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         loop="loop"
       >
         <source
-          src="/ether/smoke2.mp4"
+          src="smoke2.mp4"
           width="100vw"
           height="auto"
           poster="/poster.png"
@@ -136,7 +136,7 @@
               </p>
               <p class="line-break mt-4"></p>
               <p class="mt-4">
-                Our mission and specialty is helping holistic, spiritual, and
+                We specialize in helping gifted holistic, spiritual,
                 metaphysical entrepreneurs like you create gorgeous websites
                 that convey your authenticity and creativity.
               </p>
@@ -151,24 +151,95 @@
 
         <section>
           <div class="parallax-one">
-            <h2>Imagine</h2>
+            <h2>Discover</h2>
           </div>
         </section>
 
         <section>
-          <div class="block">
-            <p>
-              <span class="first-character sc">A</span>s a purpose-driven and
-              spiritually guided healer with a desire to transform, you deserve
-              a website that reflects your powerful message.
-            </p>
-            <p class="line-break margin-top-10"></p>
-            <p class="margin-top-10">
-              The UGG brand began to symbolize those who embraced sport and a
-              relaxed, active lifestyle. More than that, an emotional connection
-              and a true feeling of love began to grow for UGG boots, just as
-              boots." From that point on, the world began to notice.
-            </p>
+          <div class="m-0">
+            <div class="block">
+              <p>
+                <span class="first-character ny">Y</span>ou need a creative
+                partner who can deeply connect with you and understand your
+                message. We help you tune into your own creativity and the soul
+                essence of your business so we can inject that beauty throughout
+                your web design.
+              </p>
+            </div>
+
+            <!--SERVICES-->
+            <section class="contact-section bg-black mb-4">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card py-4 h-100">
+                      <div class="card-body text-center">
+                        <h4 class="text-uppercase m-0">Clarity</h4>
+                        <hr class="my-4" />
+                        <div class="small">
+                          Your vision functions as our guide through the ether
+                          where we'll unlock your unique brand personality.
+                          Together we'll discover who you are, who needs to
+                          know, and why they should care.
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card py-4 h-100">
+                      <div class="card-body text-center">
+                        <h4 class="text-uppercase m-0">
+                          Design
+                        </h4>
+                        <hr class="my-4" />
+                        <div class="small">
+                          From analyzing your competition and identifying your
+                          customers’ needs to social media planning – have all
+                          the necessary tools to start promoting your business.
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card py-4 h-100">
+                      <div class="card-body text-center">
+                        <h4 class="text-uppercase m-0">Success</h4>
+                        <hr class="my-4" />
+                        <div class="small">
+                          Development of a fully functioning, scalable website,
+                          complete with opt-in forms, payments, security tools,
+                          with 3 months of post launch support, free!
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="social d-flex justify-content-center">
+                  <a href="#" class="mx-2">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                  <a href="#" class="mx-2">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                  <a href="#" class="mx-2">
+                    <i class="fab fa-github"></i>
+                  </a>
+                </div>
+              </div>
+            </section>
+            <div class="block pt-1">
+              <p class="pb-4 text-center">
+                Go beyond by working with us.
+              </p>
+              <div class="mb-4">
+                <p class="text-center">
+                  <a class="border-button" href="process.html">Our Process</a>
+                </p>
+              </div>
+            </div>
           </div>
         </section>
 
@@ -239,60 +310,7 @@
           </div>
         </section>
       </div>
-      <!--SERVICES-->
-      <section class="contact-section bg-black my-4">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 mb-3 mb-md-0">
-              <div class="card py-4 h-100">
-                <div class="card-body text-center">
-                  <h4 class="text-uppercase m-0">Address</h4>
-                  <hr class="my-4" />
-                  <div class="small">
-                    4923 Market Street, Orlando FL
-                  </div>
-                </div>
-              </div>
-            </div>
 
-            <div class="col-md-4 mb-3 mb-md-0">
-              <div class="card py-4 h-100">
-                <div class="card-body text-center">
-                  <h4 class="text-uppercase m-0">Attract Your Ideal Clients</h4>
-                  <hr class="my-4" />
-                  <div class="small">
-                    4923 Market Street, Orlando FL
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4 mb-3 mb-md-0">
-              <div class="card py-4 h-100">
-                <div class="card-body text-center">
-                  <h4 class="text-uppercase m-0">Address</h4>
-                  <hr class="my-4" />
-                  <div class="small">
-                    4923 Market Street, Orlando FL
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="social d-flex justify-content-center">
-            <a href="#" class="mx-2">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#" class="mx-2">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#" class="mx-2">
-              <i class="fab fa-github"></i>
-            </a>
-          </div>
-        </div>
-      </section>
       <!--TESTIMONIALS-->
       <div class="container testimonial-cont">
         <div class="row">
