--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </ul>
       </div>
     </nav>
-    <header id="vid-header">
+    <header class="overlay-effect video-effect">
       <div class="overlay"></div>
       <video
         playsinline="playsinline"
@@ -149,11 +149,32 @@
           </div>
         </section>
 
-        <section>
-          <div class="parallax-one">
-            <h2>Discover</h2>
+        <section class="parallax-one px-4">
+          <div class="container">
+            <div class="">
+              <h3 class="text-left text-light pb-2">
+                Ether <span class="small lspace">\ ˈē-thər \ [GREEK]</span>
+              </h3>
+              <h3 class="definition text-light">
+                the pure essence that the gods breathe, filling the region of
+                the universe above the terrestrial sphere
+              </h3>
+            </div>
           </div>
         </section>
+        <!-- <section>
+          <div class="parallax-one px-3">
+            <div class="above-overlay">
+              <h3 class="text-left text-light">
+                Ether <span class="small lspace">\ ˈē-thər \ [GREEK]</span>
+              </h3>
+              <h3 class="definition text-light">
+                the pure essence that the gods breathe, filling the region of
+                the universe above the terrestrial sphere
+              </h3>
+            </div>
+          </div>
+        </section> -->
 
         <section>
           <div class="m-0">
@@ -232,7 +253,7 @@
             </section>
             <div class="block pt-1">
               <p class="pb-4 text-center">
-                Go beyond by working with us.
+                Go beyond by working with Ether.
               </p>
               <div class="mb-4">
                 <p class="text-center">
