--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
               <p>
                 <span class="first-character ny">Y</span>ou need a creative
                 partner who can deeply connect with you and understand your
-                message. We help you tune into your own creativity and the soul
-                essence of your business so we can inject that beauty throughout
-                your web design.
+                vision. We help you tune into your own mystical powers and the
+                soul essence of your business so we can inject that beauty
+                throughout your web design.
               </p>
             </div>
 
@@ -198,10 +198,11 @@
                         <h4 class="text-uppercase m-0">Clarity</h4>
                         <hr class="my-4" />
                         <div class="small">
-                          Your vision functions as our guide through the ether
-                          where we'll unlock your unique brand personality.
-                          Together we'll discover who you are, who needs to
-                          know, and why they should care.
+                          Your vision functions as our guide into the ether
+                          where we'll unlock your unique brand personality using
+                          numerology, astrology, and tarot. Together we'll
+                          discover who you are, who needs to know, and why they
+                          should care.
                         </div>
                       </div>
                     </div>
@@ -215,9 +216,11 @@
                         </h4>
                         <hr class="my-4" />
                         <div class="small">
-                          From analyzing your competition and identifying your
-                          customers’ needs to social media planning – have all
-                          the necessary tools to start promoting your business.
+                          All elements, symbols, typography, and colors are
+                          chosen intentionally to super-charge your brand's
+                          online vibration. We'll co-create a magnetic online
+                          presence that resonates with your authentic essence
+                          and attracts your ideal clientele.
                         </div>
                       </div>
                     </div>
@@ -237,23 +240,11 @@
                     </div>
                   </div>
                 </div>
-
-                <div class="social d-flex justify-content-center">
-                  <a href="#" class="mx-2">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                  <a href="#" class="mx-2">
-                    <i class="fab fa-facebook-f"></i>
-                  </a>
-                  <a href="#" class="mx-2">
-                    <i class="fab fa-github"></i>
-                  </a>
-                </div>
               </div>
             </section>
             <div class="block pt-1">
               <p class="pb-4 text-center">
-                Go beyond by working with Ether.
+                Go beyond with ETHER.
               </p>
               <div class="mb-4">
                 <p class="text-center">
@@ -265,69 +256,118 @@
         </section>
 
         <section>
-          <div class="parallax-two">
-            <h2>NEW YORK</h2>
+          <div class="parallax-two mb-4">
+            <h2>What We Offer</h2>
           </div>
         </section>
 
         <section>
-          <div class="block">
+          <!-- <div class="block">
             <p>
               <span class="first-character ny">B</span>reaking into the New York
               fashion world is no easy task. But by the early 2000's, UGG
               Australia began to take it by storm. The evolution of UGG from a
               world and UGG was now perfectly aligned with this movement.
             </p>
-            <p class="line-break margin-top-10"></p>
-            <p class="margin-top-10">
-              Fueled by celebrities from coast to coast wearing UGG boots and
-              slippers on their downtime, an entirely new era of fashion was
-              carved out. As a result, the desire and love for UGG increased as
-              from coast to coast. Before long, the love spread even further.
+          </div> -->
+          <!--SERVICES-->
+          <!-- <section class="contact-section bg-black mb-4 mt-2">
+            <div class="container">
+              <div class="row">
+                <div class="col-6 col-md-3 p-1 mb-3 mb-md-0">
+                  <div class="card py-4 h-100">
+                    <div class="card-body text-center">
+                      <h4 class="text-uppercase m-0">Sigils</h4>
+                      <hr class="my-4" />
+                      <div class="small">
+                        If you need a uniquely charged symbol that represents
+                        your higher-purpose work, we can help.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-6 col-md-3 p-1 mb-3 mb-md-0">
+                  <div class="card py-4 h-100">
+                    <div class="card-body text-center">
+                      <h4 class="text-uppercase m-0">Voice</h4>
+                      <hr class="my-4" />
+                      <div class="small">
+                        We infuse the written words on your website with power,
+                        heart, and personality that inspires.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-6 col-md-3 p-1 mb-3 mb-md-0">
+                  <div class="card py-4 h-100">
+                    <div class="card-body text-center">
+                      <h4 class="text-uppercase m-0">Presence</h4>
+                      <hr class="my-4" />
+                      <div class="small">
+                        Your vision functions as our guide into the ether where.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6 col-md-3 p-1 mb-3 mb-md-0">
+                  <div class="card py-4 h-100">
+                    <div class="card-body text-center">
+                      <h4 class="text-uppercase m-0">Growth</h4>
+                      <hr class="my-4" />
+                      <div class="small">
+                        Your vision functions as our guide into the ether where.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section> -->
+          <div class="block pt-1">
+            <p class="pb-4 text-center">
+              Find out more:
             </p>
+            <div class="mb-4">
+              <p class="text-center">
+                <a class="border-button" href="services.html">All Services</a>
+              </p>
+            </div>
           </div>
         </section>
-
-        <section>
-          <div class="parallax-three">
-            <h2>ENCHANTED FOREST</h2>
-          </div>
-        </section>
-
-        <section>
-          <div class="block">
-            <p>
-              <span class="first-character atw">W</span>hen the New York fashion
-              community notices your brand, the world soon follows. The
-              widespread love for UGG extended to Europe in the mid-2000's along
-              with the stylish casual movement and demand for premium casual
-              fashion. UGG boots and shoes were now seen walking the streets of
-              London, Paris and Amsterdam with regularity. To meet the rising
-              demand from new fans, UGG opened flagship stores in the UK and an
-              additional location in Moscow. As the love spread farther East,
-              concept stores were opened in Beijing, Shanghai and Tokyo. UGG
-              Australia is now an international brand that is loved by all. This
-              love is a result of a magical combination of the amazing
-              functional benefits of sheepskin and the heightened emotional
-              feeling you get when you slip them on your feet. In short, you
-              just feel better all over when you wear UGG boots, slippers, and
-              shoes.
-            </p>
-            <p class="line-break margin-top-10"></p>
-            <p class="margin-top-10">
-              In 2011, UGG will go back to its roots and focus on bringing the
-              active men that brought the brand to life back with new styles
-              allowing them to love the brand again as well. Partnering with
-              Super Bowl champion and NFL MVP Tom Brady, UGG will invite even
-              more men to feel the love the rest of the world knows so well. UGG
-              will also step into the world of high fashion with UGG Collection.
-              The UGG Collection fuses the timeless craft of Italian shoemaking
-              with the reliable magic of sheepskin, bringing the luxurious feel
-              of UGG to high end fashion. As the love for UGG continues to
-              spread across the world, we have continued to offer new and
-              unexpected ways to experience the brand. The UGG journey continues
-              on and the love for UGG continues to spread.
-            </p>
+        <section class="mt-4">
+          <div class="text-center container">
+            <div class="row">
+              <div class="col col-md-12 col-lg-3 mb-4">
+                <div class="mt-lg-4">
+                  <img
+                    class="profile-img"
+                    src="profile.jpg"
+                    alt="Noelle Horton"
+                  />
+                </div>
+              </div>
+              <div class="col col-md-12 col-lg-9">
+                <div class="about__testimonials-content">
+                  <h3>Meet <b>The Artist</b></h3>
+                  <h4>Noelle Horton</h4>
+                  <p class="text-left">
+                    Noelle is a total techie with a passion for all things
+                    metaphysical. She combines her visionary web design gifts
+                    and background in Information Technology with her unique
+                    spiritual connection to offer Ether Expressive – a powerful
+                    and transformational experience for conscious entrepreneurs
+                    who want to introduce their vision to the digital world. Her
+                    active involvement in conscious events, transformational
+                    festivals, and visionary communities fuels her mission as
+                    she activates a new breed of changemakers by linking
+                    multidimensional languages and interactive design to amplify
+                    their impact.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </div>
