--- a/index.html
+++ b/index.html
@@ -336,10 +336,13 @@
             </div>
           </div>
         </section>
-        <section class="mt-4">
+        <section
+          class="pt-4 text-light"
+          style="background-color: rgb(22, 13, 0);"
+        >
           <div class="text-center container">
             <div class="row">
-              <div class="col col-md-12 col-lg-3 mb-4">
+              <div class="col-12 col-md-2 col-lg-3 mb-4">
                 <div class="mt-lg-4">
                   <img
                     class="profile-img"
@@ -348,11 +351,11 @@
                   />
                 </div>
               </div>
-              <div class="col col-md-12 col-lg-9">
-                <div class="about__testimonials-content">
-                  <h3>Meet <b>The Artist</b></h3>
-                  <h4>Noelle Horton</h4>
-                  <p class="text-left">
+              <div class="col-12 col-md-10 col-lg-9">
+                <div>
+                  <h3 class=" text-light">Meet The Artist</h3>
+                  <h1 class=" text-light"><strong>Noelle Horton</strong></h1>
+                  <p class="text-left pt-3 px-4">
                     Noelle is a total techie with a passion for all things
                     metaphysical. She combines her visionary web design gifts
                     and background in Information Technology with her unique
